# hilo-mpc

./: .coveragerc  .gitignore  CHANGELOG.md  README.md  pyproject.toml  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: python-package.yml  tests.yml
docs/: Makefile  about.html  citation.html  genindex.html  index.html  installation.html  license.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/.doctrees/: about.doctree  citation.doctree  environment.pickle  index.doctree  installation.doctree  license.doctree
docs/.doctrees/api/: controllers.doctree  estimators.doctree  learning.doctree  modelling.doctree
docs/.doctrees/examples/: CSTR_Example.doctree  learn_mpc.doctree  mhe_chemical_reaction.doctree  mpc_formula1.doctree  mpc_pendulum.doctree  nmpc_hybrid_bio.doctree  path_following_mpc.doctree
docs/.doctrees/modules/: controllers.doctree  estimators.doctree  machinelearnings.doctree  modellings.doctree
docs/_modules/: index.html
docs/_sources/: citation.rst.txt  index.rst.txt
docs/_sources/api/: controllers.rst.txt  estimators.rst.txt  modelling.rst.txt
docs/_sources/examples/: CSTR_Example.ipynb.txt  gp_mpc_linear_mass_spring_damper.ipynb.txt  greenhouse.ipynb.txt  mpc_pendulum.ipynb.txt  nmpc_hybrid_bio.ipynb.txt  path_following_mpc.ipynb.txt
docs/_sources/modules/: controllers.rst.txt  estimators.rst.txt  machinelearnings.rst.txt
docs/api/: controllers.html  estimators.html  learning.html  modelling.html
docs/docsource/: about.rst  bibliography.bib  citation.rst  conf.py  index.rst  installation.rst  license.rst
docs/docsource/api/: learning.rst
docs/docsource/examples/: learn_mpc.ipynb  mhe_chemical_reaction.ipynb  mpc_formula1.ipynb  mpc_pendulum.ipynb  nmpc_hybrid_bio.ipynb
docs/docsource/modules/: controllers.rst  modellings.rst
docs/examples/: CSTR_Example.html  CSTR_Example.ipynb  gp_mpc_linear_mass_spring_damper.html  gp_mpc_linear_mass_spring_damper.ipynb  learn_mpc.html  learn_mpc.ipynb  mhe_chemical_reaction.html  mhe_chemical_reaction.ipynb  mpc_formula1.html  mpc_pendulum.html  mpc_pendulum.ipynb  nmpc_hybrid_bio.html  nmpc_hybrid_bio.ipynb  path_following_mpc.html
docs/modules/: controllers.html  estimators.html  machinelearnings.html  modellings.html
hilo_mpc/: __init__.py
hilo_mpc/modules/: __init__.py  base.py  control_loop.py  object.py  optimizer.py
hilo_mpc/modules/controller/: __init__.py  base.py  lqr.py  mpc.py  ocp.py  pid.py
hilo_mpc/modules/dynamic_model/: __init__.py  dynamic_model.py
hilo_mpc/modules/embedded/: muaompc.py
hilo_mpc/modules/estimator/: __init__.py  base.py  kf.py  mhe.py  pf.py
hilo_mpc/modules/machine_learning/: base.py
hilo_mpc/plugins/: plugins.py
hilo_mpc/plugins/bokeh/: __init__.py  plot.py
hilo_mpc/plugins/laplace_torch/: __init__.py  wrapper.py
hilo_mpc/plugins/matplotlib/: __init__.py  plot.py
hilo_mpc/plugins/pytorch/: __init__.py  wrapper.py
hilo_mpc/plugins/sklearn/: wrapper.py
hilo_mpc/plugins/tensorboard/: __init__.py  wrapper.py
hilo_mpc/util/: data.py  dynamic_model.py  io.py  machine_learning.py  modeling.py  optimizer.py  parsing.py  plotting.py  probability.py  session.py  unix.py  util.py  windows.py
tests/: test_GPs.py  test_KFs.py  test_LMPC.py  test_LQR.py  test_MHE.py  test_NMPC.py  test_OCP.py  test_PFs.py  test_PID.py  test_SMPC.py  test_cost_classes.py  test_hybrid_models_func.py  test_kernels.py  test_linear_systems.py  test_linearization.py  test_means.py  test_parsing.py  test_util_core.py
(+23 files in other folders)
