# To keep the order of the project links on PyPI (pyproject.toml would order alphabetically)
[metadata]
url = https://www.ccps.tu-darmstadt.de/research_ccps/hilo_mpc/
download_url = https://github.com/hilo-mpc/hilo-mpc/releases
project_urls =
    Bug Tracker = https://github.com/hilo-mpc/hilo-mpc/issues
    Documentation = https://hilo-mpc.github.io/hilo-mpc/
    Source Code = https://github.com/hilo-mpc/hilo-mpc