# To keep the order of the project links on PyPI (pyproject.toml would order alphabetically)
[metadata]
name = HILO-MPC
version = 1.0.4
description = HILO-MPC is a toolbox for easy, flexible and fast development of machine-learning-supported optimal
    control and estimation problems
long_description = file: README.md
long_description_content_type = text/markdown
author =
author_email =
maintainer = HILO-MPC Developers
maintainer_email =
url = https://www.ccps.tu-darmstadt.de/research_ccps/hilo_mpc/
download_url = https://github.com/hilo-mpc/hilo-mpc/releases
project_urls =
    Bug Tracker = https://github.com/hilo-mpc/hilo-mpc/issues
    Documentation = https://hilo-mpc.github.io/hilo-mpc/
    Source Code = https://github.com/hilo-mpc/hilo-mpc